# japanese-ocr

./: Cargo.toml  README.md
japanese-ocr/: Cargo.toml
japanese-ocr/src/: error.rs  main.rs
rs-japanese-ocr/: Cargo.toml
rs-japanese-ocr/src/: error.rs  lib.rs  model.rs
rs-japanese-ocr/src/model/: config.json
rs-manga-ocr/: Cargo.toml
rs-manga-ocr-cli/: Cargo.toml
rs-manga-ocr-cli/src/: clipboard.rs  error.rs  main.rs
rs-manga-ocr/src/: error.rs  lib.rs  model.rs
rs-manga-ocr/src/model/: decoder_model.onnx  encoder_model.onnx  tokenizer.json  tokenizer_config.json
src/: clipboard.rs  config.rs  hf.rs  main.rs  model.rs
tests/fixtures/: generation_config.json  generation_config_incorrect.json
