[workspace]
resolver = "2"
members = ["rs-manga-ocr", "rs-manga-ocr-cli"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[workspace.dependencies]
prost = "0.14"
thiserror = "2.0"
image = "0.25"
candle-core = { git = "https://github.com/huggingface/candle.git", rev = "8cc682c97bcb8a76017ad23e35fde8adac639e3f", default-features = false }
candle-onnx = { git = "https://github.com/huggingface/candle.git", rev = "8cc682c97bcb8a76017ad23e35fde8adac639e3f", default-features = false }
tokenizers = { version = "0.22", default-features = false, features = [
    "unstable_wasm",
] }

# cli
clap = { version = "4.5", features = ["derive"] }
arboard = { version = "3.6", features = [
    "wayland-data-control",
    "wl-clipboard-rs",
] }

# WASM‑specific  
getrandom = { version = "0.2", features = ["js"] }
